--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,14 @@
 Revision history for Graph::Easy::As_svg:
 
-2005-11-13 v0.12 Tels 64 tests - Fix, fix, fix, fix the bugs...
+2005-12-04 v0.13 Tels 72 tests - Fix, fix, fix, fix the bugs...
+  * require Graph::Easy 0.34
+  * handle multi-celled nodes
+  * better support labels on vertical edges
+  * fix unitialized warning in line 298
+  * use strict; in Makefile.PL
+  * support svg_info fields (mainly for wikipedia SVG integration)
+
+2005-11-13 v0.12 Tels 64 tests
   * require Graph::Easy 0.33
   * add PREREQ_FATAL to Makefile.PL
   * support bold-dash, broad and wide edge/border styles
