--- a/INSTALL
+++ b/INSTALL
@@ -1,25 +1,62 @@
 
-Graph-Easy
-==========
-
-This package was formerly known as Graph::Easy.
+=head1 INSTALL
 
 To install this module type the following:
 
 Untar the package:
 
-	tar -xzf Graph-Easy-0.18.tar.gz
+	tar -xzf Graph-Easy-As_svg-0.13.tar.gz
+
+(Replace 0.13 with the actual version you got)
 
 Change into the directory:
 
-	chdir Graph-Easy-0.18/
+	chdir Graph-Easy-As_svg-0.13/
 
-Verify the package:
+Then you need to check the signature on the package to verify that
+it is untampered and intact. To do this you have to:
 
-	cpansign --verify
+=over 2
 
-If the package fails to verify, do NOT run Makefile.pl nor install it and
-notify me immidiately. YOUR SYSTEM MIGHT GET COMPROMISED! 
+=item *
+
+Install the Perl module Module::Signature from http://search.cpan.org
+
+=item *
+
+Get my key from http://bloodgate.com/tels.asc, import it into
+GnuPG with:
+
+        gpg --import tels.asc
+
+You may also let the C<cpansign> utility fetch it automatically
+from a keyserver, if that works for you.
+
+=item *
+
+Type on a console:
+
+        cpansign --verify
+
+inside the unpacked directory.
+
+=back
+
+If the last step says "good signature" or "SIGNATURE VERIFIED OK",
+everything is all right.
+
+Note that if C<cpansign> let GnuPG download my key from a keyserver, it
+might put a C<tels.asc> file in the package directory, and then afterward
+complain that "tels.asc" is not in the MANIFEST:
+
+ Not in MANIFEST: tels.asc
+ ==> MISMATCHED content between MANIFEST and distribution files! <==
+
+You can safely ignore this warning.
+
+B<NOTE:> Please notify me immidiately if the signature
+does not verify. In that case do B<NOT> install this software, your system
+might get compromised!
 
 When the package verified okay, then proceed:
 
