--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
 Revision history for Graph::Easy::As_svg:
 
-2005-12-04 v0.13 Tels 72 tests - Fix, fix, fix, fix the bugs...
+2005-12-10 v0.14 Tels 72 tests - Fix, fix, fix, fix the bugs...
+  * require Graph::Easy 0.35
+  * quote "&", "<", ">" and '"' in links and titles (Thanx Mutante!)
+
+2005-12-04 v0.13 Tels 72 tests
   * require Graph::Easy 0.34
   * handle multi-celled nodes
   * better support labels on vertical edges
