Import of TELS/Graph-Easy-As_svg-0.15 from CPAN.
gitpan-cpan-distribution: Graph-Easy-As_svg
gitpan-cpan-version:      0.15
gitpan-cpan-path:         TELS/graph/Graph-Easy-As_svg-0.15.tar.gz
gitpan-cpan-author:       TELS
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,8 +1,15 @@
 Revision history for Graph::Easy::As_svg:
 
-2005-12-10 v0.14 Tels 72 tests - Fix, fix, fix, fix the bugs...
+2005-12-18 v0.15 Tels 72 tests - Fix, fix, fix, fix the bugs...
+  * require Graph::Easy 0.36
+  * fix edge crossings with different widths (wide vs. broad etc)
+  * add rendering of edge joints
+
+2005-12-10 v0.14 Tels 72 tests
   * require Graph::Easy 0.35
   * quote "&", "<", ">" and '"' in links and titles (Thanx Mutante!)
+  * add "xlink:show" and "xlink:target" on links to open them in
+    a new window (but Firefox ignores this anyway, see mozilla bug #315389)
 
 2005-12-04 v0.13 Tels 72 tests
   * require Graph::Easy 0.34
