--- a/TODO
+++ b/TODO
@@ -16,7 +16,7 @@ Output bugs:
 * edges with style "double" have gaps on corner pieces
 * multi-line text labels and text-labels on ver edges cross into the edge line
 * implement arrow-style: none
-* implement background/border drawing for Graph::Easy::Group::Cell
+* implement border drawing for Graph::Easy::Group::Cell
 
 Shorter output:
 
@@ -32,8 +32,9 @@ Shorter output:
 
 Browser-specific woes:
 
-* Opera <9.0 does only support SVG Tiny :-( (no tspan etc)
+* Opera 8.5 does only support SVG Tiny :-( (no tspan etc)
 * Opera 9.0 does only support SVG Basic :-( (no text-center)
 * Firefox 1.5b2 gets tspan with 'x="..." dy="1em"' wrong
 * Firefox 1.5b2 seems to ignore text-decoration on <text>
+* Firefox 1.5 opens links inside the SVG object tag space
 * Batik 1.5.1 has problems with 'font-size="12px"' on <text>
