--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,21 @@
 Revision history for Graph::Easy::As_svg:
 
-2006-01-01 v0.16 Tels 72 tests - Fix, fix, fix, fix the bugs...
+2006-01-29 v0.17 Tels 73 tests - Fix, fix, fix, fix the bugs...
+  * use Module::Install (and bundle it)
+  * require Graph::Easy 0.40
+  * require Image::Info 1.17 (for nodes with "shape: img")
+  * fix VERSION in packages as to not conflict with the ones from Graph::Easy
+  * add support for:
+    + invisible edges
+    + nodes with "shape: img" (Thanx to Jeff Schiller for pointing out
+      svg:image!)
+  * add an onclick-handler to links to force them to open in the current
+    window/tab - work around bug in FF 1.5 (Thanx Jeff Schiller again!)
+  * put the link around the node shape, not just the text. Makes it easier
+    to hit the link.
+  * nodes with shape: point get a link, too (although the area is tiny)
+
+2006-01-01 v0.16 Tels 72 tests
   * require Graph::Easy 0.38
   * use $self->angle() to get the correct shape rotation
   * forgot to limit precision on some edge-line coordinates
