--- a/TODO
+++ b/TODO
@@ -1,16 +1,21 @@
 Todo for Graph-Easy-As_svg
 ==========================
 
+* multi-line text labels and text-labels on ver edges cross into the edge line
+
 Output bugs:
 
-* Node texts are moved wrongly on rotated nodes (their new
-  center should rotate along with the shape)
-* rotated node do not increase the graph size, so corners might get cut off
+* Borders on nodes/graph are placed on the path center. Instead they should
+  be inside the shape, aka moved BORDER-WIDTH/2 to the inside.
+* Rotated nodes:
+  + Node texts are moved wrongly on rotated nodes (their new
+    center should rotate along with the shape)
+  + do not increase the graph size, so corners might get cut off
+  + the label text is not rotated with the rest of the shape
 * implement border- and edge-style: wave
 * _text_length() could be more accurate
 * edges with style "double" have wrong corner pieces
 * wide and broad self-loops are too small and the line must be moved
-* multi-line text labels and text-labels on ver edges cross into the edge line
 * support different edge starting point styles ala:
 
   ----->  |----->  o----->  +----->  *----->  >>----->
@@ -25,10 +30,6 @@ Shorter output:
 
 Browser-specific woes:
 
-* Opera 8.5 does only support SVG Tiny :-( (no tspan etc)
-* Opera 9.0 does only support SVG Basic :-( (no text-center)
 * Firefox 1.5 gets tspan with 'x="..." dy="1em"' wrong
 * Firefox 1.5 seems to ignore text-decoration on <text>
-* Firefox 1.5 opens links inside the SVG object tag space
-  (we work around that with an onclick-handler)
 * Batik 1.5.1 has problems with 'font-size="12px"' on <text>
