Import of TELS/Graph-Easy-As_svg-0.21 from CPAN.
gitpan-cpan-distribution: Graph-Easy-As_svg
gitpan-cpan-version:      0.21
gitpan-cpan-path:         TELS/graph/Graph-Easy-As_svg-0.21.tar.gz
gitpan-cpan-author:       TELS
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,13 @@
 Revision history for Graph::Easy::As_svg:
 
-2006-09-03 v0.20 Tels 89 tests - Fix, fix, fix, fix the bugs...
+2006-12-17 v0.20 Tels 93 tests - Fix, fix, fix, fix the bugs...
+  * require Graph::Easy 0.50
+  * fixes for the changes attribute system in Graph::Easy v0.50
+  * fix alignment of node labels under align: left, align: right etc.
+  * don't output needless things like 'fill=""' or default text-anchor
+  * handle borderwidths like "20px" and "2em"
+
+2006-09-03 v0.20 Tels 89 tests
   * require Graph::Easy 0.47
   * fix invalid output on multi-line aligned labels
   * fix alignment of labels on loops and vertical edges (text-align takes
